--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4331c147",
    "metadata": {},
    "outputs": [
@@ -934,9 +934,6 @@
     "            'probabilities': probabilities\n",
     "        }\n",
     "    \n",
-    "    # Demonstrate the prediction function\n",
-    "    print(f\"\\n🔮 Custom Prediction Function Demo (Fixed):\")\n",
-    "    \n",
     "    # Use the first test sample\n",
     "    test_sample = X_test.iloc[0].values\n",
     "    actual = 'Mine' if y_test[0] == 1 else 'Rock'\n",
@@ -978,18 +975,17 @@
     "        scaler_path = '../models/trained_models/scaler.joblib'\n",
     "        joblib.dump(scaler, scaler_path)\n",
     "        \n",
-    "        print(f\"✅ Best model saved to: {model_path}\")\n",
-    "        print(f\"✅ Scaler saved to: {scaler_path}\")\n",
+    "        print(f\" Best model saved to: {model_path}\")\n",
+    "        print(f\" Scaler saved to: {scaler_path}\")\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"❌ Error saving model: {str(e)}\")\n",
     "    \n",
     "    print(f\"\\n🎉 Analysis Complete!\")\n",
-    "    print(f\"✅ Dataset explored and analyzed\")\n",
-    "    print(f\"✅ Multiple models trained and evaluated\")\n",
-    "    print(f\"✅ Best model identified: {best_model_name}\")\n",
-    "    print(f\"✅ Prediction system ready for deployment\")\n",
-    "    print(f\"✅ Prediction inconsistency fixed!\")\n",
+    "    print(f\" Dataset explored and analyzed\")\n",
+    "    print(f\" Multiple models trained and evaluated\")\n",
+    "    print(f\" Best model identified: {best_model_name}\")\n",
+    "    \n",
     "    \n",
     "else:\n",
     "    print(\"⚠️ Cannot proceed with predictions - dataset not loaded\")\n",
